<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gimcana.enti.gimcana.Principal">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:gravity="top|center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/butAP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butAP" />

        <Button
            android:id="@+id/butVP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butVP" />

        <Button
            android:id="@+id/butAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showAbout"
            android:text="@string/butAbout" />

        <Button
            android:id="@+id/butExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butExit" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
